--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -8,7 +8,7 @@ server{
         root /var/www/react;
     }
 
-    location /api/ {
+    location /api {
         proxy_pass http://api;
         proxy_set_header Host $http_host;
     }
