--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,12 @@ services:
     build:
       context: ./be
     command: gunicorn config.wsgi --bind 0.0.0.0:8000
-    ports:
-      - 8000:8000
+
   fe:
     build:
       context: ./fe
     volumes:
-      - react_build:/react/build
+      - react_build:/react/dist
 
   nginx:
     image: nginx:latest
